log
Sun Mar 13 19:43:28 UTC 2022: 
 tests:  0|7
total_score: 0/70
5528e2f
Sun Mar 13 19:49:36 UTC 2022: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:47:10: error: ‘return’ with a value, in function returning void [-Werror]
   return total;
          ^~~~~
exercises.c:39:6: note: declared here
 void sumaNultimos(int a[], int n, int m, int * suma) {
      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3620af4
Sun Mar 13 19:51:30 UTC 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
1e9bb8a
Sun Mar 13 19:57:40 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
4feea18
Sun Mar 13 20:02:42 UTC 2022: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:70:17: error: invalid initializer
   Persona ptr = &datos;
                 ^
exercises.c:71:11: error: incompatible types when returning type ‘Persona {aka struct <anonymous>}’ but ‘Persona * {aka struct <anonymous> *}’ was expected
    return ptr
           ^~~
exercises.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
574959c
